syntax = "proto3";
package musechain.musecore.fungible;

import "musechain/musecore/fungible/tx.proto";
import "gogoproto/gogo.proto";
import "musechain/musecore/pkg/coin/coin.proto";

option go_package = "github.com/RWAs-labs/muse/x/fungible/types";

message EventSystemContractUpdated {
  string msg_type_url = 1;
  string new_contract_address = 2;
  string old_contract_address = 3;
  string signer = 4;
}

message EventMRC20Deployed {
  string msg_type_url = 1;
  int64 chain_id = 2;
  string contract = 3;
  string name = 4;
  string symbol = 5;
  int64 decimals = 6;
  pkg.coin.CoinType coin_type = 7;
  string erc20 = 8;
  int64 gas_limit = 9;
}

message EventMRC20WithdrawFeeUpdated {
  string msg_type_url = 1;
  int64 chain_id = 2;
  pkg.coin.CoinType coin_type = 3;
  string mrc20_address = 4;
  string old_withdraw_fee = 5;
  string new_withdraw_fee = 6;
  string signer = 7;
  string old_gas_limit = 8;
  string new_gas_limit = 9;
}

message EventMRC20Paused {
  string msg_type_url = 1;
  repeated string mrc20_addresses = 2;
  string signer = 3;
}

message EventMRC20Unpaused {
  string msg_type_url = 1;
  repeated string mrc20_addresses = 2;
  string signer = 3;
}

message EventSystemContractsDeployed {
  string msg_type_url = 1;
  string uniswap_v2_factory = 2;
  string wmuse = 3;
  string uniswap_v2_router = 4;
  string connector_mevm = 5;
  string system_contract = 6;
  string signer = 7;
}

message EventBytecodeUpdated {
  string msg_type_url = 1;
  string contract_address = 2;
  string new_bytecode_hash = 3;
  string old_bytecode_hash = 4;
  string signer = 5;
}

message EventGatewayContractUpdated {
  string msg_type_url = 1;
  string new_contract_address = 2;
  string old_contract_address = 3;
  string signer = 4;
}
